--- a/docker/Views/charge/monthly.cshtml
+++ b/docker/Views/charge/monthly.cshtml
@@ -9,7 +9,7 @@
     }
     .el-input-group__append, .el-input-group__prepend{padding:0 5px}
 </style>
-<div id="app" style="width:99%;height:99%;margin:0.5%">
+<div id="app" class="wln">
     <el-form ref="form" label-width="0px" style="width:100%;background-color:#f0f0f0;">
         <div style="position:absolute;right:30px;top:30px;z-index:9999;">
             <el-button size="mini" onclick="history.back()">返回</el-button>
