--- a/docker/Views/charge/feechart.cshtml
+++ b/docker/Views/charge/feechart.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="app" class="wln">
-    <div class="wln-title">报表查询范围</div>
+    <div class="wln-subtitle">报表查询范围</div>
     <div style="margin-bottom:30px;width:600px;">
         <el-form ref="form" label-width="10px">
             <el-form-item>
@@ -21,7 +21,7 @@
             </el-form-item>
         </el-form>
     </div>
-    <div class="wln-title">统计报表</div>
+    <div class="wln-subtitle">统计报表</div>
     <el-card class="card" :body-style="{padding:'0px'}" onclick="app.openTable('yjfbb')">
         <img class="image" src="/icons/chart-yjmx.svg">
         <div class="bottom">预缴费报表</div>
@@ -50,7 +50,7 @@
 
 
 
-    @*<div class="wln-title">图形报表</div>
+    @*<div class="wln-subtitle">图形报表</div>
     <el-card class="card pic" :body-style="{padding:'0px'}">
         <img class="image" src="/icons/chart-srhb.svg">
         <div class="bottom">收入环比图</div>
