--- a/docker/Views/charge/feeorder.cshtml
+++ b/docker/Views/charge/feeorder.cshtml
@@ -13,7 +13,7 @@
     </div>}
 
     <div style="display:table-cell;">
-        <div v-loading="loading" style="margin:0px 10px">
+        <div class="wln" v-loading="loading">
             <div class="wln-title">
                 <span style="float:right;">
                     @if (!string.IsNullOrEmpty(ViewBag.Student)) {<el-button size="mini" :plain="true" type="info" onclick="history.back()">返回</el-button>}
