--- a/docker/Views/charge/feescale.cshtml
+++ b/docker/Views/charge/feescale.cshtml
@@ -3,27 +3,27 @@
     <div>
         <div class="wln-title">
             <div style="float:right">
-                <el-button size="small" :plain="true" type="info" onclick="location.href = 'control'">返回</el-button>
-                <el-button size="small" type="primary" onclick="router.push('/feescale/add')" v-if="editer">新增缴费项目</el-button>
+                <el-button size="mini" :plain="true" type="info" onclick="location.href = 'control'">返回</el-button>
+                <el-button size="mini" type="primary" onclick="router.push('/feescale/add')" v-if="editer">新增缴费项目</el-button>
                 <input type="text" v-model="key" :value="key" @@keydown="search($event)" placeholder="按回车键进行查找" />
             </div>
-            <el-select v-model="school" clearable placeholder="请先选择要管理的校园" @@change="schoolChange" style="width:320px;">
+            缴费项目
+            <el-select v-model="school" clearable placeholder="请先选择要管理的校园" @@change="schoolChange" style="width:320px;vertical-align:middle;">
                 <el-option v-for="item in organs" :label="item.name" :value="item.id">
                     <span style="float:left">{{item.name}}</span>
                     <span style="float:right;color:#8492a6;font-size:13px">{{item.fullname}}</span>
                 </el-option>
             </el-select>
-            缴费项目
         </div>
-        <el-table :data="rows" :empty-text="message" border>
+        <el-table :data="rows" :empty-text="message">
             <el-table-column width="210" align="center" label="缴费项目名称" property="name"></el-table-column>
             <el-table-column width="180" align="center" label="@Html.Raw(ViewBag.Label_feenumber)" property="feenumber"></el-table-column>
             <el-table-column width="100" align="right" label="单价" property="price"></el-table-column>
             <el-table-column></el-table-column>
-            <el-table-column width="150" align="center" label="操作">
+            <el-table-column width="180" align="center" label="操作">
                 <template scope="scope">
-                    <el-button size="small" @@click="handleEditer(scope.row)" type="success" v-if="editer">编辑</el-button>
-                    <el-button size="small" @@click="handleDelete(scope.row)" type="warning" v-if="delrow">删除</el-button>
+                    <el-button size="mini" type="warning" icon="el-icon-edit" @@click="handleEditer(scope.row)" v-if="editer">编辑</el-button>
+                    <el-button size="mini" type="danger" icon="el-icon-delete" @@click="handleDelete(scope.row)" v-if="delrow">删除</el-button>
                 </template>
             </el-table-column>
         </el-table>
@@ -89,10 +89,10 @@
                 emptyPager.editer = false;
                 emptyPager.delrow = false;
                 $.getJSON('/organ', { 'do': val });
-                $.getJSON('/auth', { organ: val, code: 'School_FeeScale' }, function (rlt) {
+                $.getJSON('/auth', { organ: val, code: 'School_FeeScale_Editor' }, function (rlt) {
                     emptyPager.editer = rlt.success;
                 })
-                $.getJSON('/auth', { organ: val, code: 'School_FeeScale' }, function (rlt) {
+                $.getJSON('/auth', { organ: val, code: 'School_FeeScale_Delete' }, function (rlt) {
                     emptyPager.delrow = rlt.success;
                 })
                 this.refresh();
@@ -133,8 +133,16 @@
             $.getJSON('/organ', { 'do': 'list' }, function (rlt) {
                 _self.organs = rlt.data;
                 _self.school = rlt.select;
+                _self.refresh();
+                if (rlt.select) {
+                    $.getJSON('/auth', { organ: rlt.select, code: 'School_FeeScale_Editor' }, function (rlt) {
+                        emptyPager.editer = rlt.success;
+                    })
+                    $.getJSON('/auth', { organ: rlt.select, code: 'School_FeeScale_Delete' }, function (rlt) {
+                        emptyPager.delrow = rlt.success;
+                    })
+                }
             });
-            this.refresh();
         }
     })
     var appForm = Vue.extend({
